2008-10-11  Richard Hult  <richard@imendio.com>

	* src/dh-base.c: (dh_base_init): Add missing NULL terminator.

2008-10-11  Richard Hult  <richard@imendio.com>

	* src/ige-conf-gconf.c: (ige_conf_init), (ige_conf_add_defaults):
	* src/ige-conf-private.h:
	* src/ige-conf.c: (_ige_conf_defaults_free_list): Fix build with
	gconf implementation.

2008-10-11  Richard Hult  <richard@imendio.com>

	* src/ige-conf-mac.c: Rename from .m to work around a bug(?) in
	auto*, can't get this to work on linux.

	* configure.ac: Remove AC_PROG_OBJC.

	* src/Makefile.am: Update the filename here and use -xobjective-c.

2008-10-10  Richard Hult  <richard@imendio.com>

	* autogen.sh:
	* configure.ac: Rename configure.in to .ac.

2008-10-10  Richard Hult  <richard@imendio.com>

	* src/Makefile.am: Use marshal generation from build dir.

2008-10-10  Richard Hult  <richard@imendio.com>

	* build/Makefile.am.common:
	* build/Makefile.am.marshal:
	* configure.in: Add build dir and the beginnings of makefile stuff
	to make things cleaner (build dir also used as aux dir for auto*,
	inspired by cairo).

2008-10-10  Sven Herzberg  <sven@imendio.com>

	* src/dh-link.c:
	* src/dh-parser.c:
	* src/dh-search.c:
	* src/dh-window.c:
	* src/eggfindbar.c: Include <glib/gi18n-lib.h> and not
	<glib/gi18n.h>

2008-10-10  Richard Hult  <richard@imendio.com>

	* src/dh-preferences.c:
	* src/dh-preferences.h: Move key name defines from the header to
	the C file, they are not used anywhere else now.

2008-10-10  Richard Hult  <richard@imendio.com>

	* src/dh-window.c: (window_populate): Remove the state saving and
	use dh_util_state_*.

2008-10-10  Richard Hult  <richard@imendio.com>

	* src/*.h: Add begin/end decl macros for consistency.

2008-10-10  Richard Hult  <richard@imendio.com>

	* configure.in:
	* data/ui/Makefile.am:
	* data/ui/devhelp.glade:
	* data/ui/devhelp.builder:
	* src/dh-util.[ch] (dh_util_glade_connect,
	dh_util_glade_get_file):
	* src/dh-preferences.c (dh_preferences_show_dialog): Use