@@ -1,3 +1,7 @@
+2008-10-11  Richard Hult  <richard@imendio.com>
+
+	* POTFILES.in: Rename .glade file to .builder.
+
 2008-10-09  Richard Hult  <richard@imendio.com>
 
 	* POTFILES.in: Add dh-assistant-view.c
